# rcshist-snapshots

./: CHANGES  COPYING  Makefile  aclocal.m4  bsd_queue.h  config_h.in  configure  configure.in  makefile.in  misc.c  misc.h  namedobjlist.c  namedobjlist.h  rcsfile.c  rcsfile.h  rcshist.1  rcshist.c  rcshist.h  strbuf.c  strbuf.h
package/: rcshist.spec
package/debian/: changelog  control  copyright  rules  watch
