dnl Process this file with 'autoconf' to produce a 'configure' script
dnl $Id: configure.in,v 1.1 2015/02/28 23:05:50 tom Exp $
AC_PREREQ(2.52.20011201)
AC_REVISION($Revision: 1.1 $)
AC_INIT(rcshist.c)
AC_CONFIG_HEADER(config.h:config_h.in)

CF_CHECK_CACHE([AC_CANONICAL_SYSTEM])

AC_ARG_PROGRAM
CF_PROG_CC
AC_PROG_MAKE_SET
AC_PROG_INSTALL
CF_MAKE_TAGS
CF_PROG_LINT

CF_XOPEN_SOURCE

CF_WITH_WARNINGS(Wwrite-strings)
CF_DISABLE_ECHO
CF_DISABLE_LEAKS

###	output makefile
AC_OUTPUT(makefile)
CF_MAKE_DOCS(rcshist,1)
