dnl Process this file with 'autoconf' to produce a 'configure' script
dnl $Id: configure.in,v 1.4 2022/10/02 12:55:08 tom Exp $
AC_PREREQ(2.52.20141204)
AC_REVISION($Revision: 1.4 $)
AC_INIT(rcshist.c)
AC_CONFIG_HEADER(config.h:config_h.in)

CF_CHECK_CACHE([AC_CANONICAL_SYSTEM])

AC_ARG_PROGRAM
CF_PROG_CC
AC_PROG_MAKE_SET
AC_PROG_INSTALL
CF_MAKE_TAGS
CF_PROG_LINT

AC_PROG_EGREP
AC_PROG_FGREP

CF_WITHOUT_X
CF_XOPEN_SOURCE

CF_WITH_WARNINGS(Wwrite-strings)
CF_WITH_MAN2HTML
CF_DISABLE_ECHO
CF_DISABLE_LEAKS

###	output makefile
AC_OUTPUT(makefile,,,cat)
CF_MAKE_DOCS(rcshist,1)
